# aoc_leaderbot_cargo_lambda

./: CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  publish.yml
crates/aoc_leaderbot_cargo_lambda_build/: Cargo.toml  README.md
crates/aoc_leaderbot_cargo_lambda_build/src/: archive.rs  error.rs  lib.rs  toolchain.rs  zig.rs
crates/aoc_leaderbot_cargo_lambda_build/src/compiler/: cargo.rs  cargo_zigbuild.rs  cross.rs  mod.rs
crates/aoc_leaderbot_cargo_lambda_deploy/: Cargo.toml  README.md
crates/aoc_leaderbot_cargo_lambda_deploy/src/: dry.rs  extensions.rs  functions.rs  lib.rs  roles.rs
crates/aoc_leaderbot_cargo_lambda_interactive/: Cargo.toml  README.md
crates/aoc_leaderbot_cargo_lambda_metadata/: Cargo.toml  README.md
crates/aoc_leaderbot_cargo_lambda_metadata/src/: config.rs  error.rs  lambda.rs
crates/aoc_leaderbot_cargo_lambda_metadata/src/cargo/: deploy.rs  mod.rs  watch.rs
crates/aoc_leaderbot_cargo_lambda_metadata/tests/: jail.rs
crates/aoc_leaderbot_cargo_lambda_remote/: Cargo.toml  README.md
crates/aoc_leaderbot_cargo_lambda_remote/src/: lib.rs
crates/cargo-lambda-build/: Cargo.toml
crates/cargo-lambda-build/src/compiler/: cross.rs
crates/cargo-lambda-deploy/: Cargo.toml  LICENSE
crates/cargo-lambda-interactive/: Cargo.toml
crates/cargo-lambda-metadata/: Cargo.toml
crates/cargo-lambda-metadata/src/: config.rs
crates/cargo-lambda-new/: Cargo.toml
crates/cargo-lambda-remote/: Cargo.toml
crates/cargo-lambda-remote/src/: tls.rs
docs/: pnpm-lock.yaml
