[workspace]
resolver = "3"
members = [
    "crates/cargo-lambda-build",
    "crates/cargo-lambda-deploy",
    "crates/cargo-lambda-interactive",
    "crates/cargo-lambda-metadata",
    "crates/cargo-lambda-remote",
]

exclude = [
    "tests/fixtures/single-binary-package",
    "tests/fixtures/single-binary-package-build-include",
    "tests/fixtures/mixed-workspace-package",
    "tests/fixtures/missing-binary-package",
    "tests/fixtures/multi-binary-package",
    "tests/fixtures/target-dir-set-in-project",
    "tests/fixtures/workspace-package",
    "tests/fixtures/single-binary-different-name",
    "tests/fixtures/examples-package",
    "tests/fixtures/watch-multi-binary",
    "tests/fixtures/package-with-global-config",
    "tests/fixtures/config-with-context",
]

[workspace.package]
version = "0.1.0"
authors = [ "Charles Lechasseur <shiftingbeard@outlook.com>" ]
edition = "2024"
rust-version = "1.85.1"

license = "MIT"

homepage = "https://github.com/clechasseur/aoc_leaderbot_cargo_lambda#readme"
repository = "https://github.com/clechasseur/aoc_leaderbot_cargo_lambda"

[workspace.dependencies]
assertables = "9.8.0"
aws-config = "1.8.1"
aws-credential-types = "1.2.3"
aws-sdk-cloudwatchlogs = { version ="1.91.0", features = ["behavior-version-latest"] }
aws-sdk-iam = { version ="1.79.0", features = ["behavior-version-latest"] }
aws-sdk-lambda = { version ="1.86.0", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version ="1.96.0", features = ["behavior-version-latest"] }
aws-sdk-sts = { version ="1.76.0", features = ["behavior-version-latest"] }
aws-smithy-runtime = { version = "1.8.4", features = ["test-util"] }
aws-smithy-types = "1.3.2"
aws-types = "1.3.7"
base64 = "0.22.1"
cargo-lambda-build = { version = "0.1.0", path = "crates/cargo-lambda-build" }
cargo-lambda-interactive = { version = "0.1.0", path = "crates/cargo-lambda-interactive" }
cargo-lambda-metadata = { version = "0.1.0", path = "crates/cargo-lambda-metadata" }
cargo-lambda-remote = { version = "0.1.0", path = "crates/cargo-lambda-remote" }
cargo_metadata = "0.20.0"
cargo-options = { version = "0.7.5", features = ["serde"] }
cargo-zigbuild = "0.20.0"
clap = { version = "4.5.40", features = ["derive"] }
chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
dirs = "6.0.0"
figment = { version = "0.10.19", features = ["env", "test", "toml"] }
miette = { version = "7.6.0" }
reqwest = { version = "0.12.22", default-features = false, features = ["rustls-tls-native-roots"] }
rustls = "0.23.28"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = "0.27.1"
strum_macros = "0.27.1"
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = "1.46.1"
toml = "0.9.0"
tracing = { version = "0.1.41", features = ["log"] }
uuid = { version = "1.17.0", features = ["v4"] }
which = "8.0.0"
zip = { version = "4.3.0", features = ["bzip2", "chrono", "deflate"] }
