[workspace]
resolver = "3"
members = [
    "crates/aoc_leaderbot_cargo_lambda_build",
    "crates/aoc_leaderbot_cargo_lambda_deploy",
    "crates/aoc_leaderbot_cargo_lambda_interactive",
    "crates/aoc_leaderbot_cargo_lambda_metadata",
    "crates/aoc_leaderbot_cargo_lambda_remote",
]

exclude = [
    "tests/fixtures/single-binary-package",
    "tests/fixtures/single-binary-package-build-include",
    "tests/fixtures/mixed-workspace-package",
    "tests/fixtures/missing-binary-package",
    "tests/fixtures/multi-binary-package",
    "tests/fixtures/target-dir-set-in-project",
    "tests/fixtures/workspace-package",
    "tests/fixtures/single-binary-different-name",
    "tests/fixtures/examples-package",
    "tests/fixtures/watch-multi-binary",
    "tests/fixtures/package-with-global-config",
    "tests/fixtures/config-with-context",
    "tests/fixtures/workspace-with-package-config",
]

[workspace.package]
version = "0.1.0"
authors = [ "Charles Lechasseur <shiftingbeard@outlook.com>" ]
edition = "2024"
rust-version = "1.88.0"

license = "MIT"

homepage = "https://github.com/clechasseur/aoc_leaderbot_cargo_lambda#readme"
repository = "https://github.com/clechasseur/aoc_leaderbot_cargo_lambda"

[workspace.dependencies]
aoc_leaderbot_cargo_lambda_build = { version = "0.1.0", path = "crates/aoc_leaderbot_cargo_lambda_build" }
aoc_leaderbot_cargo_lambda_interactive = { version = "0.1.0", path = "crates/aoc_leaderbot_cargo_lambda_interactive" }
aoc_leaderbot_cargo_lambda_metadata = { version = "0.1.0", path = "crates/aoc_leaderbot_cargo_lambda_metadata" }
aoc_leaderbot_cargo_lambda_remote = { version = "0.1.0", path = "crates/aoc_leaderbot_cargo_lambda_remote" }
assertables = "9.8.3"
aws-config = "1.8.12"
aws-credential-types = "1.2.11"
aws-sdk-cloudwatchlogs = { version ="1.114.0", features = ["behavior-version-latest"] }
aws-sdk-iam = { version ="1.101.0", features = ["behavior-version-latest"] }
aws-sdk-lambda = { version ="1.112.0", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version ="1.119.0", features = ["behavior-version-latest"] }
aws-sdk-sts = { version ="1.95.0", features = ["behavior-version-latest"] }
aws-smithy-runtime = { version = "1.9.5", features = ["test-util"] }
aws-smithy-types = "1.3.5"
aws-types = "1.3.11"
base64 = "0.22.1"
cargo_metadata = "0.23.1"
cargo-options = { version = "0.7.6", features = ["serde"] }
clap = { version = "4.5.56", features = ["derive"] }
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
figment = { version = "0.10.19", features = ["env", "test", "toml"] }
miette = { version = "7.6.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serial_test = "3.3.1"
strum = "0.27.2"
strum_macros = "0.27.2"
tempfile = "3.24.0"
thiserror = "2.0.18"
tokio = "1.49.0"
toml = "0.9.10"
tracing = { version = "0.1.44", features = ["log"] }
uuid = { version = "1.20.0", features = ["v4"] }
zip = { version = "7.0.0", features = ["bzip2", "chrono", "deflate"] }
