[package]
name = "aoc_leaderbot_cargo_lambda_metadata"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

readme = "README.md"
license.workspace = true

homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/aoc_leaderbot_cargo_lambda_metadata/"

description = "cargo-lambda-metadata fork for the aoc_leaderbot project"

include = [ "src/**/*", "tests/**/*", "LICENSE", "README.md" ]

[dependencies]
anyhow = "1.0.102"
aoc_leaderbot_cargo_lambda_remote.workspace = true
cargo_metadata.workspace = true
cargo-options.workspace = true
clap.workspace = true
env-file-reader = "0.3.0"
figment.workspace = true
matchit = "0.9.1"
miette.workspace = true
remove_dir_all = "1.0.0"
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
