[package]
name = "aoc_leaderbot_cargo_lambda_remote"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

readme = "README.md"
license.workspace = true

homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/aoc_leaderbot_cargo_lambda_reote/"

description = "cargo-lambda-remote fork for the aoc_leaderbot project"

include = [ "src/**/*", "test-data/**/*", "LICENSE", "README.md" ]

[dependencies]
aws-config.workspace = true
aws-sdk-lambda.workspace = true
aws-types.workspace = true
clap.workspace = true
dirs.workspace = true
miette.workspace = true
rustls.workspace = true
rustls-pki-types = "1.12.0"
rustls-platform-verifier = "0.6.0"
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
aws-credential-types.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
