[package]
name = "aoc_leaderbot_cargo_lambda_remote"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

readme = "README.md"
license.workspace = true

homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/aoc_leaderbot_cargo_lambda_reote/"

description = "cargo-lambda-remote fork for the aoc_leaderbot project"

include = [ "src/**/*", "test-data/**/*", "LICENSE", "README.md" ]

[dependencies]
aws-config.workspace = true
aws-sdk-iam.workspace = true
aws-sdk-lambda.workspace = true
aws-types.workspace = true
clap.workspace = true
serde.workspace = true

[dev-dependencies]
serial_test.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
