[package]
name = "cargo-lambda-deploy"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

readme = "README.md"
license.workspace = true

homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/aoc_leaderbot_cargo_lambda_deploy/"

description = "cargo-lambda-deploy fork for the aoc_leaderbot project"

include = [ "src/**/*", "LICENSE", "README.md" ]

[dependencies]
aws-sdk-cloudwatchlogs.workspace = true
aws-sdk-iam.workspace = true
aws-sdk-s3.workspace = true
aws-sdk-sts.workspace = true
aws-smithy-types.workspace = true
cargo-lambda-build.workspace = true
cargo-lambda-interactive.workspace = true
cargo-lambda-metadata.workspace = true
cargo-lambda-remote.workspace = true
miette.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["time"]}
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
assertables.workspace = true
aws-credential-types.workspace = true
aws-smithy-runtime.workspace = true
base64.workspace = true
http = "1.0"
serde_json.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
