[package]
name = "cargo-lambda-metadata"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

readme = "README.md"
license.workspace = true

homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/aoc_leaderbot_cargo_lambda_metadata/"

description = "cargo-lambda-metadata fork for the aoc_leaderbot project"

include = [ "src/**/*", "tests/**/*", "LICENSE", "README.md" ]

[dependencies]
cargo-lambda-remote.workspace = true
cargo_metadata.workspace = true
cargo-options.workspace = true
clap.workspace = true
env-file-reader = "0.3.0"
figment.workspace = true
matchit = "0.8.5"
miette.workspace = true
remove_dir_all = "0.7.0"
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true

[dev-dependencies]
assertables.workspace = true
tempfile.workspace = true
